# MyMLProjectsPriya

./: Dockerfile  README.md  ping.py  predict.py  predict_leadscore.py  pyproject.toml  pytorch_practice.ipynb  q3_script.py  q4_script.py  q4_test.py  test.py  train.py  workshop-uv-fastapi.ipynb
DecisionTreesImplementation/: DecisionTreeHW6.ipynb  notebook (2).ipynb
