[project]
name = "mymlprojectspriya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "Deployment",
]
